<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>StructureSimilarityDialog</class>
 <widget class="ChemData::AbstractClusteringWidget" name="StructureSimilarityDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1027</width>
    <height>636</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Structure Similarity</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QVBoxLayout" name="mainLayout">
     <item>
      <layout class="QHBoxLayout" name="controlsLayout">
       <item>
        <widget class="QLabel" name="similarityLabel">
         <property name="text">
          <string>Similarity:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSlider" name="similaritySlider">
         <property name="maximum">
          <number>100</number>
         </property>
         <property name="value">
          <number>45</number>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="similaritySpinBox">
         <property name="suffix">
          <string>%</string>
         </property>
         <property name="maximum">
          <number>100</number>
         </property>
         <property name="value">
          <number>45</number>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ChemData::AbstractClusteringWidget</class>
   <extends>QWidget</extends>
   <header location="global">chemdata/gui/abstractclusteringwidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
